objects/umKALayout__c.object
<CustomObject><fields>
        <fullName>apiName__c</fullName>
        <description>Knowledge Article Type.</description>
        <inlineHelpText>Knowledge Article Type.</inlineHelpText>
        <label>Knowledge Article Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>layout__c</fullName>
        <description>Knowledge Article Layout (comma separated ordered field names to be displayed in mobile application).</description>
        <inlineHelpText>Knowledge Article Layout (comma separated ordered field names to be displayed in mobile application).</inlineHelpText>
        <label>Layout</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>umSite_id__c</fullName>
        <description>Id of the parent (umSite custom setting).</description>
        <inlineHelpText>Id of the parent (umSite custom setting).</inlineHelpText>
        <label>umSite Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><label>umKALayout</label><visibility>Public</visibility></CustomObject>